Safari fix album metada align right

--- a/style/style.scss
+++ b/style/style.scss
@@ -97,7 +97,7 @@ header {
             width: 50%;
             display: flex;
             flex-direction: column;
-            align-items: right;
+            // align-items: right;
 
             #player {
                 display: block;
